@@ -42,7 +42,7 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.release>22</maven.compiler.release>
         <exec.mainClass>com.tugalsan.tst.thread.Main</exec.mainClass>
     </properties>
     <build>
@@ -76,6 +76,9 @@
                 <configuration>
                     <release>22</release>
                     <enablePreview>true</enablePreview>
+                     <compilerArgs><!-- this will make netbeans happy-->
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                     <!-- <compilerArgs>
                        <arg>- -add-modules</arg>
                         <arg>jdk.incubator.vector</arg>
